--- a/README.adoc
+++ b/README.adoc
@@ -3,12 +3,36 @@
 List of tech companies to help developers to find job.
 
 
+## Top Bangladeshi Software Companies:
+1. DataSoft
+2. TigerIT [Java]
+3. Kaz Software [.Net, Java, PHP, AngularJS, React]
+4. IBCS-Primax
+5. LeadSoft
+6. MagnitoDigital
+7. BrainStation-23 [Android, IOS, React, Xamarin, .Net, PHP, Python, Java]
+8. SouthTech [.Net, Java Spring, Android, AngularJS, Visual Basic]
+9. Pathao Ltd [Android]
+10. Streams Tech Inc. [ArcGIS-ESRI, AngularJS, .Net, SQL,MongoDB]
 
-### Contribute
+## Top Multinational Software Companies:
+1. Therap (USA) [Java, J2EE]
+2. Samsung R&D (Korea) [IOS, Android, Tizen, C/C++, Swift, Machine Learning]
+3. Widespace (Sweden) [Java]
+4. Vantage Labs (USA) [Java, PHP, AngularJS]
+5. REVE Systems (Singapore) [Java]
+6. Vizrt (Norway) [.Net, Java]
+7. Selise (Switzerland) [Android, IOS, AngularJS, NodeJS, Python, .Net]
+8. Cefalo (Norway) [Android, .Net, Python, Rails, IOS]
+9. Newscred (USA) [Python, NodeJS, Angular2, Scala, MongoDB]
+10. MonstarLab (Japan) [Java Spring, Laravel, Symfony, AngularJS, Amazon Web Services]
+11. Escenic (Norway)
 
-Contributions are always welcome! Create a pull request.
+## Some other companies having IT section:
+1. Grameenphone IT
+2. bits [Java]
+3. bkash [Android, JavaScript, Java EE, JSP, Servlet]
 
 
 ### Copyright & License
-
 Licensed under the MIT License, see the link:LICENSE[LICENSE] file for details.
