--- a/README.adoc
+++ b/README.adoc
@@ -15,9 +15,9 @@ List of tech companies to help developers to find job.
 |Company Name |Office location |Technologies | Web presence
 
 |BrainStation-23
-|
+|8th floor, Plot#2, Amtoli, Bir Uttam AK Khandakar Rd Mohakhali Commercial Area, Dhaka-1212
 |Android, IOS, React, Xamarin, .Net, PHP, Python, Java
-|
+|http://www.brainstation-23.com/
 
 |Cefalo Amravi Ltd (Norway)
 |House:12, Road:12, Dhanmondi, Dhaka
@@ -39,9 +39,12 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |DataSoft
+|Rupayan Shelford (20th floor), 23/6, Mirpur Road, Shyamoli, Dhaka-1207, Bangladesh.
+Phone : 880-2-9110136, 880-2-9110169, 880-9609667788, 880-2-9117706
+Fax : +880-2-9114747
+Email : info@datasoft-bd.com
 |
-|
-|
+|http://datasoft-bd.com/
 
 |Dynamic Solution Innovators (DSi)
 |Mohakhali DOHS, Dhaka
@@ -49,9 +52,9 @@ https://github.com/ChumbokIT[Github]
 |http://www.dsinnovators.com[Website]
 
 |Escenic (Norway)
-|
+|Kaderia Tower, JA 28/8B Bir Uttam AK Khandakar Rd, Dhaka 1212
 |Java
-|
+|http://www.escenic.com/
 
 |===
 
@@ -61,9 +64,9 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |IBCS-Primax
+|House # 51, Road # 10A, Dhanmondi R/A, Dhaka-1209, Bangladesh
 |
-|
-|
+|http://www.ibcs-primax.com/ibcsonweb/
 
 |===
 
@@ -72,14 +75,16 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |Kaz Software
-|
+|28/1 Eskaton Garden
+Dhaka
+Bangladesh
 |.Net, Java, PHP, AngularJS, React
-|
+|http://kaz.com.bd/
 
 |LeadSoft
+|Rupayan trade Centre, 17th Floor, 114 Kazi Nazrul Islam Avenue, Bangla Motors, Dhaka 1000. (At Bangla Motor Roundabout).
 |
-|
-|
+|http://leads.com.bd/
 
 
 |===
@@ -89,19 +94,21 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |MagnitoDigital
+|3rd Floor, House-7, Road-23/B, Gulshan-1, Dhaka, Bangladesh
 |
-|
-|
+|http://magnitodigital.com/
+https://www.facebook.com/magnitodigital
+https://www.linkedin.com/company/magnito-digital/?trk=tyah
 
 |MonstarLab (Japan)
-|
+|Ahmed Tower (20th floor, Kemal Ataturk Avenue, Dhaka 1213
 |Java Spring, Laravel, Symfony, AngularJS, Amazon Web Services
-|
+|https://monstar-lab.com/global/
 
 |Newscred (USA)
 |
 |Python, NodeJS, Angular2, Scala, MongoDB
-|
+|https://www.newscred.com/
 
 |===
 
@@ -111,14 +118,15 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |Pathao Ltd
-|
+|Apt 3A, House 52, Road 2,
+Banani, Dhaka
 |Android
-|
+|https://pathao.com/
 
 |REVE Systems (Singapore)
-|
+|REVE Centre, Plot-94, Purbachal Express Highway, Dumni, Khilkhet, Dhaka
 |Java
-|
+|https://www.revesoft.com/
 
 |===
 
@@ -127,19 +135,25 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |Samsung R&D (Korea)
-|
+|56, Seongchon-gil, Seocho-gu, Seoul, Republic of Korea
+111 Sonargaon Road, Dhaka 1205
 |IOS, Android, Tizen, C/C++, Swift, Machine Learning
-|
+|https://research.samsung.com/srbd
 
 |Selise (Switzerland)
-|
+|Secure Link Services AG
+Innovation Center
+Haldenstrasse 23
+8306 Brüttisellen
+Bangladesh office: Dhaka 1209
+Switzerland
 |Android, IOS, AngularJS, NodeJS, Python, .Net
-|
+|https://selise.ch/
 
 |Streams Tech Inc.
-|
+|House No 16, Suite F4 & F3, 23/B Road No 23/B, Dhaka 1213
 |ArcGIS-ESRI, AngularJS, .Net, SQL,MongoDB
-|
+|https://streamstech.com.bd
 
 |SouthTech
 |
@@ -147,14 +161,17 @@ https://github.com/ChumbokIT[Github]
 |
 
 |Therap (USA)
-|
+|562 Watertown Avenue, Suite 3, Waterbury, CT 06708-2240, USA
 |Java, J2EE
-|
+| https://therap.recruiterbox.com/
 
 |TigerIT
-|
+|Tiger IT Bangladesh Limited
+House 21, Road 28, Block-K, Banani Model Town
+Dhaka, 1213
+Bangladesh
 |Java
-|
+|http://www.tigerit.com/
 
 |===
 
@@ -164,19 +181,23 @@ https://github.com/ChumbokIT[Github]
 |Company Name |Office location |Technologies | Web presence
 
 |Vantage Labs (USA)
-|
+|6th Floor, Dynasty Tower, Begum Rokeya Avenue, Mirpur 11
+Dhaka, Bangladesh
 |Java, PHP, AngularJS
-|
+|https://www.facebook.com/VantageLabsDhaka/
 
 |Vizrt (Norway)
-|
+|Kaderia Tower, 14 Floor, A 28/8B Mohakhali C/A, Dhaka-1212, Bangladesh
 |.Net, Java
-|
+|http://www.vizrt.com/
 
 |Widespace (Sweden)
 |
 |Java
-|
+|https://www.widespace.com/
+https://www.facebook.com/WidespaceMobile
+https://twitter.com/WidespaceMobile
+https://www.linkedin.com/company/widespace-ab
 
 |===
 
