--- a/README.adoc
+++ b/README.adoc
@@ -137,7 +137,7 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 
 |Pathao Ltd
 |Apt 3A, House 52, Road 2, Banani, Dhaka
-|Android
+|Android, IOS, golang, PHP, kubernetes
 |https://pathao.com/[Website]
 
 |REVE Systems (Singapore)
