Add Isratts Technologies

--- a/README.adoc
+++ b/README.adoc
@@ -98,6 +98,11 @@ https://github.com/ChumbokIT[Github]
 |
 |http://www.ibcs-primax.com/ibcsonweb/[Website]
 
+|Isratts Technologies
+|House # 58, Road # 05, O R Nizam Rd R/A, GEC, Chattogram, Bangladesh
+|
+|http://www.israttstech.com/[Website]
+
 |===
 
 ==== Alphabetical Order: J - L
