Add Isratts Technologies (#12)

--- a/README.adoc
+++ b/README.adoc
@@ -115,6 +115,11 @@ https://github.com/ChumbokIT[Github]
 |Android, Java, HTML, CSS, MongoDB, PostGreSQL
 |https://app.ipay.com.bd/career/categories/13 [Website]
 
+|Isratts Technologies
+|House # 58, Road # 05, O R Nizam Rd R/A, GEC, Chattogram, Bangladesh
+|
+|http://www.israttstech.com/[Website]
+
 |===
 
 ==== Alphabetical Order: J - L
