--- a/README.adoc
+++ b/README.adoc
@@ -37,6 +37,11 @@ List of tech companies to help developers to find jobs.
 |C, PHP, Android, iOS, .NET
 |http://www.brotecs.com[Website]
 
+|belivIT
+|30/A, Sattara Centre (14th floor), VIP Road, Naya Paltan, Dhaka-1000
+|Android, iOS, PHP, BI Solution
+|https://www.belivit.com[Website]
+
 |Craftsmen
 |House# 448, Lane# 7,DOHS Baridhara, Dhaka 1206, Bangladesh
 |ES/TypeScript, Node.js, React/Vue.js, Redux, React Native, AWS, GCP, Serverless Framework.
