Commlink Info Tech Limited added

--- a/README.adoc
+++ b/README.adoc
@@ -65,6 +65,11 @@ https://www.facebook.com/ChumbokIT[Facebook],
 https://www.linkedin.com/company/chumbok-it[LinkedIn],
 https://github.com/ChumbokIT[Github]
 
+|Commlink Info Tech Limited
+|House No: 3 Road No: 23/A  Gulshan-1, Dhaka-1212 BANGLADESH.
+|Java, Spring etc.
+|https://www.commlinkinfotech.com/[Website]
+
 |===
 
 ==== Alphabetical Order: D - F
