--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,11 @@ List of tech companies to help developers to find jobs.
 |Android, Java, Spring, Go, JavaScript, AngularJS, NodeJS, AWS, Machine Learning
 |https://www.augmedix.com/[Website]
 
+|Braincraft Limited
+|House: 295, Road: 19/B, Mohakhali DOHS, Dhaka - 1206
+|Android, Java, Go, Javascript, AngularJS, NodeJS
+|https://www.braincraftapps.com[Website]
+
 |BrainStation-23
 |8th floor, Plot#2, Amtoli, Bir Uttam AK Khandakar Rd Mohakhali Commercial Area, Dhaka-1212
 |Android, IOS, React, Xamarin, .Net, PHP, Python, Java
