--- a/README.adoc
+++ b/README.adoc
@@ -410,7 +410,7 @@ https://www.linkedin.com/company/widespace-ab[LinkedIn]
 |
 
 |bkash
-|Shadhinata Tower, 1,Bir Sresjtha Shaheed Jahangir Gate, Dhaka Cantonment, Dhaka - 1206
+|Shadhinata Tower, 1,Bir Sreshtha Shaheed Jahangir Gate, Dhaka Cantonment, Dhaka - 1206
 |Android, JavaScript, Java EE, JSP, Servlet
 |https://www.bkash.com[Website]
 
