--- a/README.adoc
+++ b/README.adoc
@@ -181,6 +181,12 @@ https://github.com/ChumbokIT[Github]
 |.Net, Java, PHP, AngularJS, React
 |http://kaz.com.bd/[Website]
 
+|Kinetik Care
+|_Remote_ 
+|Node.js, React, Redux, MongoDB, Angular
+|https://kinetik.care/[Website],
+https://www.linkedin.com/search/results/people/?currentCompany=%5B%2218354939%22%5D&origin=COMPANY_PAGE_CANNED_SEARCH[LinkedIN]
+
 |LeadSoft
 |Rupayan trade Centre, 17th Floor, 114 Kazi Nazrul Islam Avenue, Bangla Motors, Dhaka 1000. (At Bangla Motor Roundabout).
 |
