--- a/README.adoc
+++ b/README.adoc
@@ -185,12 +185,18 @@ https://github.com/ChumbokIT[Github]
 |_Remote_ 
 |Node.js, React, Redux, MongoDB, Angular
 |https://kinetik.care/[Website],
-https://www.linkedin.com/search/results/people/?currentCompany=%5B%2218354939%22%5D&origin=COMPANY_PAGE_CANNED_SEARCH[LinkedIN]
+https://www.linkedin.com/search/results/people/?currentCompany=%5B%2218354939%22%5D&origin=COMPANY_PAGE_CANNED_SEARCH[LinkedIn]
 
 |LeadSoft
 |Rupayan trade Centre, 17th Floor, 114 Kazi Nazrul Islam Avenue, Bangla Motors, Dhaka 1000. (At Bangla Motor Roundabout).
 |
 |http://leads.com.bd/[Website]
+
+|LifeData 
+|_Remote_ 
+|iOS, Android
+|https://www.lifedatacorp.com/[Website],
+https://www.linkedin.com/search/results/people/?currentCompany=%5B%224861691%22%5D&origin=COMPANY_PAGE_CANNED_SEARCH[LinkedIn]
 
 |LIILab 
 |House No. 2, 3rd Floor, Dorgah Gate, Dorgah Moholla, Sylhet, Bangladesh
