--- a/README.adoc
+++ b/README.adoc
@@ -367,6 +367,11 @@ https://www.linkedin.com/company/southtechgroup/[LinkedIn]
 |Android, Java, Node
 |https://www.techcarebd.com/[Website], https://www.facebook.com/techcarebd/[Facebook]
 
+|Triva It Limited
+|38/1/1 Vagolpur Lane, Hazaribagh Park, Dhaka 1205
+|Graphic Design, UI/UX, Motion Graphics, Web Design
+|https://www.trivaitltd.com/[Website]
+
 |===
 
 
