--- a/README.adoc
+++ b/README.adoc
@@ -86,6 +86,11 @@ https://github.com/ChumbokIT[Github]
 |
 |http://datasoft-bd.com/[Website]
 
+|Dream71
+|House No 16 (Level 4), Bashundhara R/A, Main Road, Block – A, Dhaka-1229, Bangladesh.
+|
+|http://www.dream71.com/[Website]
+
 |Dcastalia Limited
 |5B, House 91, Road 04, Block B, Banani, Dhaka 1213, Bangladesh
 |Web, Android and iOS
