Frontier Semiconductor (FSM) Tech Company added

--- a/README.adoc
+++ b/README.adoc
@@ -141,7 +141,10 @@ https://github.com/ChumbokIT[Github]
 |C, C++, Angular, SQL etc.
 |https://www.fiftytwo.com[Website]
 
-
+|Frontier Semiconductor (FSM)
+|Wasi Tower (FL: 7 CD), ECB Chattar, Matikata Rd, Dhaka
+|C, C++, MFC, Open CV, Open GL
+|http://www.frontiersemi.com/center/home.php[Website]
 
 |===
 
