--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,13 @@ List of tech companies to help developers to find jobs.
 |Android, Java, Spring, Go, JavaScript, AngularJS, NodeJS, AWS, Machine Learning
 |https://www.augmedix.com/[Website]
 
+
+|Bdtask
+|B-25, Mannan Plaza, 4th Floor, Khilkhet, Dhaka-1229,Bangladesh
+|Android, Web, Wordpress
+|https://www.bdtask.com/[Website]
+
+
 |Braincraft Limited
 |House: 295, Road: 19/B, Mohakhali DOHS, Dhaka - 1206
 |Android, Java, Go, Javascript, AngularJS, NodeJS
