--- a/README.adoc
+++ b/README.adoc
@@ -348,6 +348,11 @@ https://www.linkedin.com/company/magnito-digital/[LinkedIn]
 |Android, IOS, PHP, React, Docker, AWS, Nodejs, Python, PostgresSQL, MySQL
 |http://portonics.com/[Website]
 
+|Progoti Systems Limited (SureCash Ltd.)
+|	51/B, Borak Mehnur, Kemal Ataturk Ave, Dhaka, Bangladesh
+|Android, Spring-boot, Django, Docker, Python, PostgresSQL, MySQL
+|https://www.surecash.net/[Website]
+
 |Renessa Info Systems Ltd.
 |Pritam Zaman Tower, 11th Floor, 37/2, Culvert Road, Purana Paltan, Dhaka-1000, Bangladesh.
 |PHP, Laravel, CodeIgniter, CakePHP, JavaScript and jQuery
